concord_macros/tests/trybuild/fail/codegen/sse_endpoint_execute_websocket.stderr
error[E0599]: the method `execute_websocket` exists for struct `PendingRequest<'_, SseEndpointExecuteWebSocketApiCx, EpEventsHc265a3e29e1206e4, ReqwestTransport>`, but its trait bounds were not satisfied
  --> tests/trybuild/fail/codegen/sse_endpoint_execute_websocket.rs:20:26
   |
 9 | / api! {
10 | |     client SseEndpointExecuteWebSocketApi {
11 | |         base "https://example.com"
...  |
14 | |     GET Events
   | |______________- doesn't satisfy `_: WebSocketEndpoint<SseEndpointExecuteWebSocketApiCx>`
...
20 |       let _ = api.events().execute_websocket().await.unwrap();
   |                            ^^^^^^^^^^^^^^^^^
   |
   = note: the following trait bounds were not satisfied:
           `EpEventsHc265a3e29e1206e4: WebSocketEndpoint<SseEndpointExecuteWebSocketApiCx>`
note: the trait `WebSocketEndpoint` must be implemented
  --> $WORKSPACE/concord_core/src/endpoint.rs
   |
   | pub trait WebSocketEndpoint<Cx: ClientContext>: Endpoint<Cx> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
